--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,4 +1,4 @@
-{{#if}}
+{{#if model}}
   <div class="ui text container">
     <h3 class="first headroom">Contact{{help-modal model=model routeToSuccessPage=(action "routeToSuccessPage")}}</h3>
     <div class="ui tiny message">
