--- a/app/templates/data-format.hbs
+++ b/app/templates/data-format.hbs
@@ -1,4 +1,4 @@
-{{#if}}
+{{#if model.submission}}
   <div class="ui text container">
     <h3 class="first headroom">Data format {{help-modal model=model.submission routeToSuccessPage=(action "routeToSuccessPage")}} </h3>
     <p>Match the columns in the data you are submitting (in the drop-down menu) with the columns used by OpenAddresses (in the table). Some datasets won't have a match for every column, but match as many as possible.</p>
