--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -1,4 +1,4 @@
-{{#if}}
+{{#if model}}
   <div class="ui text container">  
     <h3 class="first headroom"> Review {{help-modal model=model routeToSuccessPage=(action "routeToSuccessPage")}}</h3>
     <p>Submitting this form will create a pull request on GitHub to the <a href="https://github.com/openaddresses/submit-service"> OpenAddresses repository</a>.</p>
