--- a/app/templates/components/no-model.hbs
+++ b/app/templates/components/no-model.hbs
@@ -1,6 +1,6 @@
 <!-- this will render if user reloads page -->
 <div class="ui text container center aligned flow">
-    <h3 class="first headroom">Interrupted session <i class="search icon"></i></h3>
+    <h3 class="first headroom">Interrupted session <i class="redo icon"></i></h3>
   <div class="content">
     <p>We're sorry, but your submission process has been interrupted.</p> 
     <p>To start over, please {{#link-to "intro"}}click here{{/link-to}}.</p>
