remove checkbox for may_include_units, as well as functionality relating to the checkbox. Translate postfixed_street_with_units_pattern to postfixed_street and may_contain_units in data-format rather than review.

--- a/app/templates/components/split-column.hbs
+++ b/app/templates/components/split-column.hbs
@@ -2,8 +2,8 @@
   <i class="remove icon"></i> Cancel split
 </div>
 {{#if (eq field "street")}}
-  <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street" field}}>Remove prefix number</button>
-  <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street_with_units_pattern" field}}>Remove postfix unit</button>
+  <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street" "street"}}>Remove prefix number</button>
+  <button class="ui small button basic green" onClick={{action "extractionFunction" "postfixed_street_with_units_pattern" "street"}}>Remove postfix unit</button>
 {{/if}}
 
 {{#if (eq field "number")}}
